css/main.css
/*main.css*/


/* 
  COMBINED ELEMENTS -------------------
*/
/*For Product Listing, codes are in flexbox.css*/
/*For Website Grid Structure, codes are in grid.css



/* 
	Overall Typography items
	padding: top, right, bottom, left;
*/


body {
	font-family: 'dosislight';
	line-height: 150%;

	/*prevent horizontal scroll*/
	overflow-x: hidden;
}

h1 {
	font-family: 'RumRaisin', serif;
	font-size: 3rem;
}

h2 {
	font-family: 'Allan', sans-serif;
	font-style: bold;
	font-size: 2.5em;
}

h3 {
	font-family: 'Allan', sans-serif;
	font-style: bold;
	font-size: 1.5em;
}


ul {
	list-style: none;
}

img {
	height: auto;
	max-width: 100%;
}

figure {
	margin: 0;
} 


/*text field*/


input, textarea {
	display: block;
	background-color: #EDEBFF;
	font-family: dosislight;
	font-size: 80%;
	padding: 0.1em 0.5em;
}

input:focus, textarea:focus {
	background-color: white;
}

/* 
  TEXT ELEMENTS -------------------
*/
p a, ul a{
	text-decoration: none;
	color: #14C89A;
}

p a:hover, p a:focus, ul a:hover, ul a:focus {
	text-decoration: underline;
	text-decoration-color: #8D4595;
}


/* 

MAIN NAVIGATION MENU, IMAGE, BODY CONTENT 

*/

.contentBody{
	padding-left: 3rem;
	padding-right: 3rem;
	padding-top: 1.5rem;
}

.full-width {
	width: 100vw;
	position: relative;
	left: 30%;
	right: 30%;
	margin-left: -30vw;
	margin-right: -30vw;
	margin-bottom: -1vw; /* for bottom white space */
}

@media (min-width: 40em) {
	.full-width {
		width: 100vw;
	}
}


/*about us page text elements STARTS*/

#companyinfo p {
	padding: 1em 0;
	margin: 0 5em 0 0;
}

#companyinfo .grid-col-1of2 {
	padding: 3em 0em 0 6em;
}

/*about us page text elements ENDS*/

/*
#fullbleed {
	position: fixed;
	top: -50%;
	left: -50%;

	z-index: 0;

	aspect ratio 
	min-width: 200%;
	max-width: 200%;
} */

/*
#fullbleed img {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;

	margin: auto;
	min-width: 50%;
	min-height: 50%;
} */

.nav-main {
	/*position: fixed;*/
}

.nav-main-item {
	display: inline-block;
	color: white;
	background-color: rgb(255, 255, 255);
	font-family: Qarmic;
	font-size: 1rem;
	padding: 0.9rem 0.5rem;
	text-decoration: none;
	-webkit-transition: background-color 0.5s ease-out;
	transition: background-color 0.5s ease-out;
}

.nav-main-item:hover, .nav-main-item:focus {
	background-color: rgb(20, 200, 154);
}
.button-submit-reset {
	display: inline-block;
	padding: 0.5em 1em;
	color: white;
	font-family: Qarmic;
	background-color: rgb(20, 200, 154);
	border-radius: 0.3em;
	text-decoration: none;
	-webkit-transition: background-color 0.5s ease-out;
  	transition: background-color 0.5s ease-out;
}


/* company news section on index page */

#companynews {
	position: relative;
	float: left;
	padding: 2em 0;
	height: 100%;
}

#companynews p {
	text-align: left;
	padding: 1.5em 5.2em;
	margin: 0;
}

#companynews .grid-col-1of3 {
	text-align: center;
}


/* 

SIDEBAR NAVIGATION

*/

#sidebar {
	float: left;
	padding: 0;
	position: relative;

	top: 0em;
	left: 0;
	bottom: 0;

	height: 100%;

}

.sidebar-item {
	padding: 0.75em 0.25em;
	text-decoration: none;
	border-bottom: 1px solid black;
}

.sidebar-items a {
	padding: 0 1em;
	text-decoration: none;
	font-size: 1.2rem;
	padding: 0.25em 0.5em;
	display: block;
}

.sidebar-item:hover, .sidebar-item:focus {
	background-color: rgb(220, 220, 220);
}



/*

 FOOTER 

*/

#footer {
	position: relative;
	float: bottom;
	left: 0;
	/*text-align: center;*/
	padding-top: .5em;
	width: 100%;
	z-index: -100;
}

#footer a {
	text-decoration: none;
	height: 10em;
}

#footer .logo {
	padding-top: 2em;
}

.icons {
	padding-top: 1em;
}

.icon {
	width:2em;
	height: 2em;
	margin:0 .2em 0;
}

#footer ul {
	margin-top: 0;
	padding-left: 0;
}

#footer .grid-col-1of4 {
	text-align: center;
	margin: 5rem 0 4rem;
	height: 4em;
	border-left: .1em solid rgba(0,0,0,.06);
	border-right: .1em solid rgba(0,0,0,.06);
}

.button-submit-reset:hover, .button-submit-reset:focus {
	background-color: rgb(120, 120, 120);
}



/* 

for adjusting the section in item gallery

*/

.giftShopGallery{
	margin-top: 2rem;
	margin-right: 5rem;
	margin-left: 5rem;
	z-index: 100;
}
.galleryLine{
	padding-bottom: -5rem;
}
.itemParagraph{
	margin-top: 3rem;
	display: inline-block;
}

.itemHover{
	display: block;
	-webkit-transition: opacity 0.4s ease-out;
  	transition: opacity 0.4s ease-out;
}

.itemHover:active, .itemHover:hover, .itemHover:focus{
	opacity: 0.5;
}

.logo{
	margin-top: -3rem;
	margin-bottom: -0.5rem;
	margin-right: 1rem;
}


/* Nav Buttons */

.navMain{
	position: fixed;
	background-color: rgb(250,250,250);

	top: 0;
	right: 0;
	left: 0;

	z-index: 10; /* for elements that have position value set */
}

.navMainLogo{
	color: rgb(0,0,0);
	/*background-image: url("../img/logo.png");*/
	display: inline-block;
	font-family: Allan;
	background-color: rgb(220, 220,220 );
	font-size: 1.5rem;
	padding: 1.25rem 0rem;
	margin: auto;
	text-align: center;
	width: 15rem;
	height: auto;
	text-decoration: none;
}

.navMainItem {
	display: inline-block;
	color: black; /*what is this for?*/
	background-color: rgb(250,250,250);
	font-size: 1.5rem;
	font-family: Allan;
	float: right;
	padding: 1.25rem 1.5rem;
	margin: auto -0.2rem;
	text-decoration: none;
	text-align: center;
	transition: background-color 0.15s ease-out;
}


.navMainItem:active, .navMainItem:hover, .navMainItem:focus {
	color: white;
	background-color: rgb(20, 200, 154);
}

.navMainLogo:active, .navMainLogo:hover, .navMainLogo:focus {
	color: white;
	background-color: rgb(20, 200, 154);
}



/* item contents */
.itemContent{
	/*padding-left: -1rem;*/
a.logo {
	font-family: RumRaisin;
}


/* food menu list stuff*/
#foodItems{

}



.menuItenPara{
	padding-left: 100rem;
}

.foodItemImg{
	padding-right: 2rem;
}

